Variants and AddOns now shown on edit product page
